and opens overlays with hidden text when `search-invisible' is `open'.

+++
*** By default, prefix arguments do not now terminate Isearch mode.
Set `isearch-allow-prefix' to nil to restore old behavior.

*** More Isearch commands accept prefix arguments, namely
`isearch-printing-char', `isearch-quote-char', `isearch-yank-word',
`isearch-yank-line'.

** MH-E has been updated to MH-E version 8.5.
See MH-E-NEWS for details.

---
** The unrmail command converts from BABYL to mboxrd rather than mboxo.
Customize `unrmail-mbox-format' to change this.

---
** Similarly, customize `rmail-mbox-format' to influence some minor aspects
of how Rmail displays non-MIME messages.

+++
** New function `ses-rename-cell' to give SES cells arbitrary names.

** trace-function was largely rewritten.
New features include:
- no prompting for the destination buffer, unless a prefix-arg was used.
- additionally to prompting for a destination buffer, when a prefix-arg is
  used, the user can enter a "context", i.e. Lisp expression whose value at the
  time the function is entered/exited will be printed along with the function
  name and arguments.  Useful to trace the value of (current-buffer) or
  (point) when the function is invoked.

** New command `delete-duplicate-lines' has new types of operation:
When its arg ADJACENT is non-nil (when called interactively with C-u C-u)
it works like the utility `uniq'.  Otherwise by default it deletes
duplicate lines everywhere in the region without regard to adjacency.
When it arg KEEP-BLANKS is non-nil (when called interactively with C-u C-u C-u),
duplicate blank lines are preserved.

** New `cycle-spacing' command allows cycling between having just one
space, no spaces, or reverting to the original spacing.  Like
`just-one-space' command it can handle or ignore newlines and
leave different number of spaces.

** Tramp

+++
*** New connection method "adb", which allows to access Android